Set up server and database. Defined mutations to add user and add comment

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 NODE_ENV = 'development'
 PORT = 8000
+MONGO_URI = 'mongodb+srv://jstirpe:jstirpe567@cluster0.ffmxy.mongodb.net/comments_db?retryWrites=true&w=majority'
+
+DRAFT.js
